--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>FunBox</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 
 <body class="page-body">
@@ -37,9 +38,9 @@
                         </div>
                         <ul class="card__link-block">
                             <li class="card__link-wrapper">
-                                <p class="card__link--text card__link--parent">Чего сидишь? Порадуй котэ, <a class="card__link"
-                                        href="#">купи.</a></p>
-                                        <p class="card__link--text card__link--hover">Печень утки разварная с артишоками.</p>
+                                <p class="card__link--text card__link--parent">Чего сидишь? Порадуй котэ, <a
+                                        class="card__link" href="#">купи.</a></p>
+                                <p class="card__link--text card__link--hover">Печень утки разварная с артишоками.</p>
                             </li>
                         </ul>
                     </li>
@@ -62,9 +63,10 @@
                         </div>
                         <ul class="card__link-block">
                             <li class="card__link-wrapper">
-                                <p class="card__link--text">Чего сидишь? Порадуй котэ, <a class="card__link"
-                                        href="#">купи.</a></p>
-                                        <p class="card__link--text card__link--hover">Головы щучьи с чесноком да свежайшая сёмгушка.</p>
+                                <p class="card__link--text card__link--parent">Чего сидишь? Порадуй котэ, <a
+                                        class="card__link" href="#">купи.</a></p>
+                                <p class="card__link--text card__link--hover">Головы щучьи с чесноком да свежайшая
+                                    сёмгушка.</p>
                             </li>
                         </ul>
                     </li>
